2010-02-24  Ivan Maidanski <ivmai@mail.ru> (really Bruce Mitchener)

	* doc/README.darwin: Update.

2010-02-24  Ivan Maidanski <ivmai@mail.ru> (really Bruce Mitchener)

	* CMakeLists.txt: Adjust INCLUDE_DIRECTORIES and SRC (to make it
	usable on Mac OS X).
	* doc/README.cmake: Update.

2010-02-24  Ivan Maidanski <ivmai@mail.ru> (really Jack Andrews)

	* CMakeLists.txt: New file (adding CMake support).
	* tests/CMakeLists.txt: Ditto.
	* doc/README.cmake: Ditto.

2010-02-19  Ivan Maidanski <ivmai@mail.ru> (really Bruce Mitchener)

	* configure.ac (darwin): Don't define HAS_PPC_THREAD_STATE...
	macros.
	* include/private/gc_priv.h (THREAD_FLD): Recognize
	__DARWIN_UNIX03 instead of HAS_PPC_THREAD_STATE... macros.
	* configure: Regenerate.
	* include/private/config.h.in: Ditto.

2010-02-15  Ivan Maidanski <ivmai@mail.ru> (really Alexandr Shadchin)

	* pthread_support.c: Include <sys/param.h> and <sys/sysctl.h> for
	OpenBSD.
	* pthread_support.c (get_ncpu): Define also for Darwin, NetBSD and
	OpenBSD.
	* pthread_support.c (GC_thr_init): Use get_ncpu() for Darwin,
	NetBSD and OpenBSD.

2010-02-04  Ivan Maidanski <ivmai@mail.ru>

	* mallocx.c (GC_generic_malloc_many, GC_malloc_many): Define even
	if THREADS is undefined.
	* include/gc.h (GC_malloc_many): Update the comment.

2010-02-03  Ivan Maidanski <ivmai@mail.ru>

	* ChangeLog: Fix some typos.

2010-01-29  Ivan Maidanski <ivmai@mail.ru>

	* Makefile.in: Regenerate (by autoreconf -vif using
	libtool-2.2.6b, automake-1.11.1, autoconf-2.65).
	* aclocal.m4: Ditto.
	* compile: Ditto.
	* config.guess: Ditto.
	* config.sub: Ditto.
	* configure: Ditto.
	* depcomp: Ditto.
	* install-sh: Ditto.
	* ltmain.sh: Ditto.
	* missing: Ditto.
	* mkinstalldirs: Ditto.

2010-01-15  Ivan Maidanski <ivmai@mail.ru>

	* include/gc_cpp.h (GC_PLACEMENT_DELETE): Define for Embarcadero
	(formerly known as Borland) C++ compiler v6.21+.
	* include/gc_cpp.h (GC_NO_OPERATOR_NEW_ARRAY): Define for ancient
	VC++ compilers.
